0.4.4
Minor bug fixes for latest glib etc.
Removed nag screen.
No longer doing releases, so removed update check.

0.4.3
Updated Doxyfile.
More reliable opening of files when doxygen link is clicked.
Requires doxygen version 1.8.14
Various plugin fixes.
Various scripting changes.

0.4.2
Restore session now silently skips missing files.
Doxygen config files should now set "HTML_FILE_EXTENSION = .xhtml" and NOT ".html".
Added custom icons to debug plugin.
Fixed wrong types when calling set/remove user mark.
Added debugger plugin to unstable plugins.
Added "Current Session" to session manager save menu to save current session.
Fixed segfault if LANG env var is unset, defaults to en_GB now.
Added "Vertical Cut" to context menu.
Fixed file opening and conversion with spaces in filename.
Fixed not picking up files to open on command line when using -m switch.
Fixed gtk 3 crash when moving outside tab.
Added 'Vertical Copy' to context menu.
Added Vertical select/copy, hold CTRL key whilst dragging.
Minor code clean for terminal pane plugin.
Fixed seffault when selecting file in browser plugin.
Minor bug fixes.
Fixed yet another api breakage in gtk3 ... for fucks sake leave shit alone guys!
Fixed kkeditmsg-3 trying to open gtk2 version of editor.
Added SessionID number to status bar.
Editor default sessionID for remote control is now desktop number +100.
Fixed charset detection on opening some files.
Added --session/-f option to load new session on opening a new instance, format is --session=/full/path/to/session/file.
Locked pages are now stored/re-loaded with save/restore session.
Fixed locking contents.
Fixed tab size in gtk3 again!
Added Lock/Unlock contents to tab popup.
Fixed editor and viewer positions not being on screen at start up.
Fixed segfaule on selecting back/forward menu item on gtk3.
Fixed wrong sized icons in menus and toolbar for certain themes in gtk3 version.
Fixed wrong button label on open dialog.
Fixed opening utf16 encoded file.