@@ -3,6 +3,7 @@ global:	addToGui;
 		doAbout;
 		loadPage;
 		enablePlug;
+		plugPrefs;
 		g_module_unload;
 		g_module_check_init;
 
