@@ -351,6 +351,7 @@
 #define PREFS_MAX_CHARS_IN_FUNC_DEFS_LABEL gettext("Max Characters In Function Defs:")
 #define PREFS_MAX_CHARS_IN_BMS_LABEL gettext("Max Characters In Bookmarks:")
 #define PREFS_MAX_JUMP_HISTORY_LABEL gettext("Max Back/Forward History:")
+#define PREFS_SAVE_PERIOD_LABEL gettext("Auto Save Period (mins):")
 #define PREFS_UPDATE_CHECK_LABEL gettext("Check For Updates")
 #define PREFS_GLOBAL_PLUG_MENU_LABEL gettext("Use Global Plugins Menu( Requires Restart )")
 #define PREFS_ADMIN_LABEL gettext("Administration")
